deleted a inline css in h2 class='score'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1 class="title">Tic - Tac - Toe</h1>
   <div id="scoreboard">
-    <h2 class="score" style="color: rgb(124, 5, 124);">Scoreboard</h2>
+    <h2 class="score">Scoreboard</h2>
     <h2 class="parag-score">Player : <span id="playerScore">0</span>&nbsp;&nbsp;Computer : <span
         id="computerScore">0</span><button class="btn-reset" id="reset">Reset Game</button><button class="btn-reset"
         id="resetScore">Reset Score</button></h2>
