--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div id="scoreboard">
     <h2 class="score">Scoreboard</h2>
     <h2 class="parag-score">Player : <span id="playerScore">0</span>&nbsp;&nbsp;Computer : <span
-        id="computerScore">0</span><button class="btn-reset" id="reset">Reset Game</button><button class="btn-reset"
-        id="resetScore">Reset Score</button></h2>
+        id="computerScore">0</span><button class="btn-reset" id="reset">Play Again</button><button class="btn-reset"
+        id="resetScore">Quit</button></h2>
     <audio id="player" autoplay loop>
       <source src="./resources/Helmet Heroes Soundtrack.mp3" type="audio/mpeg">
     </audio>
