Capitalized G of game

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2 class="score">Scoreboard</h2>
     <h2 class="parag-score">Player : <span id="playerScore">0</span>&nbsp;&nbsp;Computer : <span
         id="computerScore">0</span><button class="btn-reset" id="reset">Play Again</button><button class="btn-reset"
-        id="resetScore">Quit game</button></h2>
+        id="resetScore">Quit Game</button></h2>
     <audio id="player" autoplay loop>
       <source src="./resources/Helmet Heroes Soundtrack.mp3" type="audio/mpeg">
     </audio>
