just cleaning up spaces

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Tic Tac Toe</title>
 </head>
 
@@ -14,9 +16,9 @@
   <h1 class="title">Tic - Tac - Toe</h1>
   <div id="scoreboard">
     <h2 class="score">Scoreboard</h2>
-    <h2 class="parag-score">Player : <span id="playerScore">0</span>&nbsp;&nbsp;Computer : <span
-        id="computerScore">0</span><button class="btn-reset" id="reset">Play Again</button><button class="btn-reset"
-        id="resetScore">Quit Game</button></h2>
+    <h2 class="parag-score">Player :  <span id="playerScore">0</span>  Computer : <span id="computerScore">0</span><button
+        class="btn-reset" id="reset">Play Again</button><button class="btn-reset" id="resetScore">Quit Game</button>
+    </h2>
     <audio id="player" autoplay loop>
       <source src="./resources/Helmet Heroes Soundtrack.mp3" type="audio/mpeg">
     </audio>
@@ -35,6 +37,7 @@
     <div id="7"></div>
     <div id="8"></div>
   </div>
+
   <script src="app.js"></script>
 </body>
 
